# SPR_2022

./: CMakeLists.txt  README.md  TODO
cmake/: Presets.cmake
cmake_problems/: check_the_check.cmake  endians.cmake  minesweeper.cmake
spr-tasks-projects/: loopless_dev.cpp
spr-tasks-projects/Check_the_check/: check_the_check.cpp  check_the_check_dev.cpp  check_the_check_main.cpp  check_the_check_main_dev.cpp
spr-tasks-projects/HowBigIsIt/: x  (+4 more)
spr-tasks-projects/Loopless/: app.py  loopless_dev.cpp  output.txt  pyproject.toml  test_tools.cpp  tests.py  x
spr-tasks-projects/Loopless/LOOPLESS_PYTESTING/: .coverage  app.py  tests.py
spr-tasks-projects/Loopless/LOOPLESS_PYTESTING/binary/: united_free_pascal_codes_0  united_free_pascal_codes_1  united_free_pascal_codes_2  united_free_pascal_codes_3  united_free_pascal_codes_4
spr-tasks-projects/Loopless/LOOPLESS_PYTESTING/logs_dir/: xxx0  xxx1  xxx2  xxx3  xxx4
spr-tasks-projects/Loopless/ps_files/: ps_exp1.pas  ps_exp2.pas  ps_exp3.pas  united_free_pascal_codes_0.pas  united_free_pascal_codes_0testing_data.pas  united_free_pascal_codes_0testing_data.test  united_free_pascal_codes_1.pas  united_free_pascal_codes_1testing_data.test  united_free_pascal_codes_2.pas  united_free_pascal_codes_2testing_data.test  united_free_pascal_codes_3.pas  united_free_pascal_codes_3testing_data.test  united_free_pascal_codes_4.pas  united_free_pascal_codes_4testing_data.test
spr-tasks-projects/Loopless/ps_files/logs_dir/: xxx0  xxx1  xxx2  xxx3
tasks-independent/: check_the_check.cpp  endians.cpp  minesweeper.cpp  output3.txt  x
(+45 files in other folders)
