[tool.poetry]
name = "loopless"
version = "0.1.0"
description = ""
authors = ["Fak"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
